removed unnecessary css definitions (previous fixes for BS2), and fixed category width on mobile screens

--- a/public/css/category.less
+++ b/public/css/category.less
@@ -51,6 +51,11 @@
 	}
 
 	.topic-row {
+
+		&.col-md-12 {
+			margin-right: 11px;
+		}
+
 		border-radius: 5px;
 		padding: 5px 5px 5px 20px;
 		border: 1px solid rgba(0, 0, 0, 0.2);
@@ -84,18 +89,10 @@
 					margin-right: 6px;
 				}
 
-				@media (max-width: 979px)
-				{
-					width: 100%;
-				}
+
 			}
 		}
 
-		@media (max-width: 979px)
-		{
-			width: 100%;
-			margin-left: 0px;
-		}
 
 	}
 
